<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".data.model.OPDAdd"
    android:background="@color/purple_200">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adding_new_patient"
        android:id="@+id/add_patient"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        />
<TextView
    android:layout_marginTop="200dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/enter_patient_name"
    android:textSize="22sp"
    android:textColor="@color/white"
    android:textStyle="bold"
    android:layout_marginStart="10dp"
    android:id="@+id/patient_name"
    />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/patient_name"
        android:layout_marginStart="10dp"
        android:hint="@string/enter_the_patients_name_here"
        android:textColorHint="@color/white"
        android:id="@+id/input_name"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_patients_age"
        android:textSize="22sp"
        android:layout_below="@+id/input_name"
        android:layout_marginStart="10dp"
        android:textColor="@color/white"
        android:id="@+id/age"
        android:textStyle="bold"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/age"
        android:id="@+id/input_age"
        android:hint="@string/enter_patients_name_here"
        android:textColorHint="@color/white"
        android:layout_marginStart="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_age"
        android:id="@+id/blood_group"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/enter_patients_blood_group"
        android:layout_marginStart="10dp"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/blood_group"
        android:layout_marginStart="10dp"
        android:hint="@string/enter_patients_blood_group_here"
        android:textColorHint="@color/white"
        android:id="@+id/input_bloodgroup"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_patients_disease"
        android:layout_below="@+id/input_bloodgroup"
        android:textSize="22sp"
        android:id="@+id/disease"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:textStyle="bold"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_below="@+id/disease"
        android:id="@+id/input_disease"
        android:textColorHint="@color/white"
        android:hint="@string/enter_patients_disease_here"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_data"
        android:textColor="@color/purple_200"
        android:layout_below="@+id/input_disease"
        android:backgroundTint="@color/white"
        android:id="@+id/add_button"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>