<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup"
    android:background="@color/purple_200">
    <TextView
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:text="@string/hospital_management_system"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/white"
        android:id="@+id/hospital_management"
        android:textSize="30sp"
        />
    <TextView
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_username"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:id="@+id/enter_username"
        android:textSize="20sp"
        android:layout_marginTop="250dp"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_below="@+id/enter_username"
        android:hint="@string/choose_an_unique_username"
        android:id="@+id/input_username"
        android:textColorHint="@color/white"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_username"
        android:text="@string/enter_password"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/enter_password"
        android:layout_marginStart="10dp"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_below="@+id/enter_password"
        android:hint="@string/choose_a_strong_password"
        android:id="@+id/input_password"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/re_enter_your_password"
        android:layout_below="@id/input_password"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:id="@+id/re_enter_password"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/re_enter_password"
        android:hint="@string/enter_password_again"
        android:layout_marginStart="10dp"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:id="@+id/input_re_enter_password"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_below="@id/input_re_enter_password"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/white"
        android:id="@+id/signup_button"
        android:textColor="@color/purple_200"
        />
</RelativeLayout>