<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".Login">

    <TextView
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:text="@string/hospital_management_system"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/white"
        android:id="@+id/hospital_management"
        android:textSize="30sp"
        />
    <TextView
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_username"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:id="@+id/enter_username"
        android:textSize="20sp"
        android:layout_marginTop="300dp"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_below="@+id/enter_username"
        android:hint="@string/enter_your_username"
        android:id="@+id/input_username"
        android:textColorHint="@color/white"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_username"
        android:text="@string/enter_password"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/enter_password"
        android:layout_marginStart="10dp"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_below="@+id/enter_password"
        android:hint="@string/enter_your_password"
        android:id="@+id/input_password"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:backgroundTint="@color/white"
        android:textColor="@color/purple_200"
        android:layout_below="@id/input_password"
        android:id="@+id/login_button"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>