<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OPDDel"
    android:background="@color/purple_200">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleting_patients_record"
        android:id="@+id/del_patient"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        />
    <TextView
       android:layout_above="@+id/input_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_patient_name"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:id="@+id/patient_name"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="@string/enter_the_patients_name_here"
        android:textColorHint="@color/white"
        android:id="@+id/input_name"
        android:layout_above="@+id/del_btn"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_data"
        android:backgroundTint="@color/white"
        android:textColor="@color/purple_200"
        android:id="@+id/del_btn"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        />
</RelativeLayout>