<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/purple_200"
    tools:context=".OPD">
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/add_record"
    android:backgroundTint="@color/white"
    android:textColor="@color/purple_200"
    android:layout_marginStart="256dp"
    android:layout_marginTop="650dp"
    android:id="@+id/plusbtn"
    />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:textColor="@color/purple_200"
        android:text="@string/delete_record"
        android:layout_below="@+id/plusbtn"
        android:layout_marginStart="230dp"
        android:id="@+id/del_rec"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:backgroundTint="@color/white"
        android:textColor="@color/purple_200"
        android:id="@+id/logout_button"
        android:layout_marginStart="287dp"
        android:layout_below="@+id/del_rec"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>