<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="16dp"
    android:layout_margin="10dp"
    android:backgroundTint="@color/purple_200">
    <LinearLayout
        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginVertical="6dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:id="@+id/name"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Anas"
                android:layout_marginStart="8dp"
                android:textSize="29sp"
                android:textColor="@color/list"
                android:textStyle="bold"
                android:id="@+id/name_data"
                />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20"
            android:layout_marginStart="8dp"
            android:textSize="29sp"
            android:textColor="@color/list"
            android:textStyle="bold"
            android:id="@+id/age_data"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blood_group"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="AB+"
            android:layout_marginStart="8dp"
            android:textSize="29sp"
            android:textColor="@color/list"
            android:textStyle="bold"
            android:id="@+id/bloodgroup_data"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disease"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Broken Leg"
            android:layout_marginStart="8dp"
            android:textSize="29sp"
            android:textColor="@color/list"
            android:textStyle="bold"
            android:id="@+id/disease_data"
            />
    </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>